--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npx vite build",
     "preview": "vite preview",
     "deploy": "npm run build && node deploy.js",
     "deploy:vercel": "npm run build && vercel --prod",
     "deploy:netlify": "npm run build && netlify deploy --prod --dir=dist",
-    "vercel-build": "vite build"
+    "vercel-build": "npx vite build"
   },
   "dependencies": {
     "react": "^18.2.0",
